Some cleanup on adding blocks.

--- a/BlockFarmEditor.USync.csproj
+++ b/BlockFarmEditor.USync.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Title>Block Farm Editor USync</Title>
+      <VersionPrefix>17.1.0</VersionPrefix>
+      <PackageOutputPath>../</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
